Processed metrics for each class